Get_Date rename time_Function

--- a/Basic Javascript Projects/Basic_HTML_7.html
+++ b/Basic Javascript Projects/Basic_HTML_7.html
@@ -7,7 +7,7 @@
 <html>
     <body>
        <p id=Greeting></p>
-       <button onclick="get_Date()">Click here</button>
+       <button onclick="time_function()">Click here</button>
        <br>
        <p>Voters must be at least 18 years of age to participate in Democracy.</p>
        <input id="Age" value="18"/>
