--- a/Javascript Projects/calulator.html
+++ b/Javascript Projects/calulator.html
@@ -34,7 +34,7 @@
             <button type="button" class="decimal function" value=".">.</button>
             <button type="button" class="All-clear" value="all-clear">AC</button>
 
-            <button type="button" class="equal-sign" value="=">=</button>
+            <button type="button" class="equal-sign operator" value="=">=</button>
 
 
         </div>
