--- a/Basic Javascript Projects/Basic_HTML_3.html
+++ b/Basic Javascript Projects/Basic_HTML_3.html
@@ -4,7 +4,7 @@
 	<title></title>
     <meta charset="utf-8">
     <script src="./JS/Basic_Javascript_3.js"></script>
-<html>
+    </head>
     <body>
         <p id="Add">What is 2+2?</p>
         <button onclick= "addFunction()">Click here for the answer</button>
