--- a/Basic Javascript Projects/Basic_HTML_11.html
+++ b/Basic Javascript Projects/Basic_HTML_11.html
@@ -6,7 +6,7 @@
     <script src="./JS/Basic_Javascript_11.js"></script>
 </head>
 <body>
-    <h1>What is your favorite color?</h1>
+    <h1 style="font-size:8vw;">What is your favorite color?</h1>
     <H3>Pick your favorite color from this list:</H3>
     <ul>
         <li>Red</li>
