--- a/Javascript Projects/HTML_02.html
+++ b/Javascript Projects/HTML_02.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" type="text/css" href="./CSS/CSS_02.css">
 </head>
 <body>   
-   <!--Form-->
+    <script>document.body.className += ' fade-out';</script>
+    <!--Form-->
        <div class="form">
         <form name="myForm" action="" onsubmit="return validateForm()" method="GET">
             First Name: <input type="text" name="fname"><br>
             Last Name: <input type="text" name="lname"><br>
-            Email: <input type="email" name="EMAIL"><br>
-            Password: <input type="password" name="Password"><br>
+            Phone: <input type="text" name="Phone"><br>
             <input type="submit" value="Submit">
         </form>
     </div>
