--- a/Basic Javascript Projects/Time_Html.html
+++ b/Basic Javascript Projects/Time_Html.html
@@ -8,5 +8,5 @@
     <p id="Time_of_day"></p>
     <button onclick="Time_Function()">Click here to get the time</button>
 </body>
-<script src="./Javascript/Time_Function.js"></script>
+<script src="./JS/Time_Function.js"></script>
 </html>
